--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura teste teste teste uiuiu</title>
+    <title>Cursos da Alura teste teste teste</title>
 </head>
 <body>
     <ul>
