--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos da Alura teste teste </title>
+    <title>Cursos da Alura teste teste uiuiui </title>
 </head>
 <body>
     <ul>
